# Coursera_White

./: CMakeLists.txt
RotateArray/: main.cpp
w4_chtenie_tablici/: CMakeLists.txt  main.cpp
w4_functia_ensure/: CMakeLists.txt  main.cpp
w4_rabota_s_failami/: CMakeLists.txt  main_1.cpp  main_2.cpp
w4_rabota_so_vrem/: CMakeLists.txt  main.cpp
w4_rational/: CMakeLists.txt  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp
w4_spisok_stdentov/: CMakeLists.txt  main.cpp
w4_vvod_s_tochnostiu/: CMakeLists.txt  main.cpp
w5_final/: CMakeLists.txt  main.cpp
