cmake_minimum_required(VERSION 3.15)
project(Coursera)

set(CMAKE_CXX_STANDARD 17)

#add_subdirectory(w4_rabota_s_failami)
#add_subdirectory(w4_vvod_s_tochnostiu)
#add_subdirectory(w4_chtenie_tablici)
#add_subdirectory(w4_spisok_stdentov)
#add_subdirectory(w4_rational)
#add_subdirectory(w4_functia_ensure)
#add_subdirectory(w4_rabota_so_vrem)
#add_subdirectory(w5_final)
add_subdirectory(RotateArray)

#git remote add origin https://github.com/Amigo010/Coursera_White.git
#git push -u origin master
#git checkout --track origin/daves_branch